# ChangeLog for app-text/texlive-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.109 2009/08/19 08:09:24 aballier Exp $

  19 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r5.ebuild, texlive-core-2008-r6.ebuild:
  Update lzma deps to allow xz-utils, bug #279871

*texlive-core-2008-r6 (06 Aug 2009)

  06 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  +texlive-core-2008-r6.ebuild:
  Add a patch so that xdvipdfmx doesnt try to free a non malloced pointer,
  bug #276415

  03 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r5.ebuild:
  Add patch to fix building with autoconf 2.64, bug #279687

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-core-2007-r13.ebuild, -files/texmf-update:
  remove old

  10 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  texlive-core-2008-r5.ebuild:
  Add ~mips love

  08 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r5.ebuild:
  Add patches for glibc 2.10 + gcc 4.4 combo (bug #271052 by Jussi Kosunen)
  and implicit declarations (bug #264884, by OKUMURA N. Shin-ya).

  22 May 2009; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r5.ebuild:
  Add a fix for getline conflicts, glibc 2.10, by Constantin Baranov, bug
  #270430

  08 May 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-core-2008-r4.ebuild:
  remove unused version

  03 May 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r5.ebuild:
  Marking texlive-core-2008-r5 ppc64 and ppc for bug 264601

  03 May 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r5.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #264601

  01 May 2009; Markus Meier <maekke@gentoo.org> texlive-core-2008-r5.ebuild:
  amd64/x86 stable, bug #264601

  01 May 2009; Jeroen Roovers <jer@gentoo.org> texlive-core-2008-r5.ebuild:
  Stable for HPPA (bug #264601).

*texlive-core-2008-r5 (29 Apr 2009)
