@@ -6,6 +6,7 @@ DIST texlive-core-2008-texmf.d-1.tar.lzma 9521 RMD160 df138c1f9cafa9f158bbf07c69
 DIST texlive-core-2008.tar.lzma 23175835 RMD160 629784b111c0d4bc9fac9f9131f63203d6e1dd38 SHA1 730986c628bd658b5062face9e400f61203d6b8d SHA256 60cf277a60311756ea51ed7e6c50b50d4069f4b4c007b11c114ca5c640e5a3c2
 DIST texlive-core-patches-13.tar.lzma 30047 RMD160 dbea99e6cee194ee58a9f68cb3d4ae551b325124 SHA1 f0a9fc2dcd19e5ff6199b37b554f59826427866b SHA256 887548874a5ef736576973f940068254b608357db48ef7570643f4dd6e2cf6b4
 DIST texlive-core-patches-14.tar.lzma 30229 RMD160 fc36a621b208838e56efbb3f0acc74dd4da9863c SHA1 d1bdd604f11aa7365a54c4ff7a7661be50f5761d SHA256 9949aa209b0911c5857946b834f1f77e4703a1a81622235670f61a7b89c47fc2
+DIST texlive-core-patches-15.tar.lzma 30872 RMD160 2e66f1a05432f447835e1dec95cddb830619c704 SHA1 48567742c5cc550d3282a11112948cb35b71bdf3 SHA256 7bc693d923a8f291bffea695df3d4945b692d1f8b71340048529b96acaafa9e1
 DIST texlive-module-a2ping-2008.tar.lzma 31077 RMD160 d9a156c3e063831bc66fe3bf444903e7a5344d03 SHA1 2c7cbfb771fcb6f3b522fe7879de6904b34bb602 SHA256 e69a466b698a3c08fbb0cd7e8edf3d591d4d50d81b1a213e0d614aff78c77697
 DIST texlive-module-a2ping.doc-2008.tar.lzma 17451 RMD160 09ab10c94617e5e52f06b45f159a187cdc542f05 SHA1 c0686da95317a2e1bd3dc78dba72ff825e7282cf SHA256 75eb1e8bddc5dcf2e08271a7a038332087103f99b21f5802378f0da28c6e19d7
 DIST texlive-module-bin-afm2pl-2008.tar.lzma 9559 RMD160 bc07ab11c6aefbd45c88dd305e81064f70880e80 SHA1 a9f1734314f4f0b4d6acdaa2e51de2d40d1bdfb4 SHA256 46d4b8000a940514bf246728b57d59c54065cbd6f85498aa5835b1532b30f6e8
@@ -94,12 +95,13 @@ DIST texlive-module-texlive.infra-2008.tar.lzma 105129 RMD160 9de08b79d943f830ce
 DIST texlive-module-texlive.infra.doc-2008.tar.lzma 743421 RMD160 7e7c0f5a0205306f2a4cd02d20306775cba1b5ff SHA1 c4ab6ac0f09572203b268db9318053c34cb36bed SHA256 334cc5ad29d289daee2e638005300cd6b67231f902804276e047b259cca37a7c
 EBUILD texlive-core-2008-r5.ebuild 11561 RMD160 d82e4bb2efa924e6d39ca5448a73da64186ac746 SHA1 6e78255cae50ffcb8c564437495ead7dbd20aa1f SHA256 13a9bdf01d2ed2e6f20860328afe647ba8ece799008834f3745e21cccfc73d2b
 EBUILD texlive-core-2008-r6.ebuild 11571 RMD160 4eae0674a9e1cbf30c2fe3953740a3611bcfc6f2 SHA1 e506d44f36ee057b349d78ad7002ee6e250a6702 SHA256 c9b5deb14a38ffa0c40fd4022a202065d3e1e0dc996b64bca04faa7b398e8ff8
-MISC ChangeLog 18467 RMD160 0f8c1db4c6eb271c044d33ba80ad45f6e4e1c265 SHA1 d8e8f9b10c6e1952dd067a6313a2add8c585073c SHA256 0b07e97c695dd51a6de8efd77aa52be7195e6ed31ac9418d213773211fd70ab1
+EBUILD texlive-core-2008-r7.ebuild 11571 RMD160 859c1ff48730d2b71b1effed2bbcad0f4740b246 SHA1 854bcbd2cb933bf77f101c3235da873f394f8de1 SHA256 6b29a042e4e5cff614304e8b712bfbcb175a663a81b13601910bff93d77e4e58
+MISC ChangeLog 18638 RMD160 8ae4ca76c87bf56f62d6d94849b877a49cb16515 SHA1 580df585dac80f20174fe354b7600965b14df9ed SHA256 8cedd0e2d62d3b5b97046c7538fcfdd770e1e2699d712487f5b16087c25b5815
 MISC metadata.xml 327 RMD160 10186cf048d44753bf4cec722eed45d2ade12316 SHA1 0254321c012da0e8f80aec6f29a0fb5b17675d4d SHA256 e520223493249c261b48f7f7460ed7c262d35383484e730cfefba51fde1195be
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkqLszcACgkQvFcC4BYPU0rxoACeKiQ0bMKrF5LqOldX4wu0ednJ
-PtUAnA1T+/6yDJOM7pGgwQQshMNz3GX0
-=1oiF
+iEYEARECAAYFAkqWOkkACgkQvFcC4BYPU0q5WwCgpoUX4WOCuZrfFgOHRMPtYGJU
+zvAAoIdaVTWFibDdDqnCc4NdTK4jNNZF
+=+2Y/
 -----END PGP SIGNATURE-----
